<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>omni_base_driver</name>
  <version>0.1.0</version>
  <description>Base driver for Neuron-OmniBot at ROS2</description>
  <maintainer email="ting.chang@adlinktech.com">Ting Chang</maintainer>
  <license>Apache License 2.0</license>
  <author>YuSheng Tseng</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>base_controller</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>base_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
