<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>omni_base_driver</name>
  <version>0.1.0</version>
  <description>Base driver for Neuron-OmniBot at ROS2</description>
  <maintainer email="ting.chang@adlinktech.com">Ting Chang</maintainer>
  <license>Apache License 2.0</license>
  <author>YuSheng Tseng</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>base_controller</depend>
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
